# darbiadev-sanmar

./: .buildinfo  .gitignore  .gitlab-ci.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  gh-pages.yml
_modules/: index.html
_modules/darbiadev_sanmar/lib/: lib.html
_sources/: index.rst.txt
_sources/api/: darbiadev_sanmar.lib.rst.txt  darbiadev_sanmar.rst.txt  modules.rst.txt
api/: darbiadev_sanmar.html  darbiadev_sanmar.lib.html  modules.html
docs/source/: conf.py  index.rst
requirements/: requirements-dev.txt  requirements-docs.txt  requirements.in  requirements.txt
src/darbiadev_sanmar/: __init__.py  sanmar_services.py
tests/: test_clients.py
