[tool.poetry]
name = "darbiadev-sanmar"
version = "0.2.0"
description = ""
authors = ["Bradley Reynolds <bradley.reynolds@darbia.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
suds-community = "^0.8.5"
xmltodict = "^0.12.0"
python-benedict = "^0.24.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.1.1"
sphinx-autodoc-annotation = "^1.0-1"
sphinxcontrib-packages = "^1.0.1"
sphinxcontrib-napoleon = "^0.7"
sphinxcontrib-apidoc = "^0.3.0"
sphinx-rtd-theme = "^0.5.2"
pytest = "^6.2.4"
tox = "^3.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
